--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,8 @@
 ---
-
+import Layout from "../layouts/Layouts.astro";
+const title = "Home";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1 class="text-2xl font-bold">My Astro Site</h1>
-	</body>
-</html>
+<Layout title={title}>
+  <h1 class="text-2xl font-bold">My Astro {title} Site</h1>
+</Layout>
