--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
 import Layout from "../layouts/Layouts.astro";
+import '../styles/global.css';
+
 const pageTitle = "About me";
 
 const identity = {
@@ -8,12 +10,15 @@ const identity = {
   occupation: "Technical Writer",
   hobbies: ["photography", "birdwatching", "baseball"],
 };
-
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
-
 const happy = true;
 const finished = false;
 const goal = 3;
+
+// using css variable
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <Layout title={pageTitle}>
@@ -45,7 +50,7 @@ const goal = 3;
   </ul>
   <p>My skills are:</p>
   <ul>
-    {skills.map((skill) => <li>{skill}</li>)}
+    {skills.map((skill) => <li class="skill">{skill}</li>)}
   </ul>
 
   {happy && <p>I am happy to be learning Astro!</p>}
@@ -59,4 +64,16 @@ const goal = 3;
       <p>My goal is not 3 days.</p>
     )
   }
+  <!-- individual style -->
+  <style define:vars={{skillColor, fontWeight, textCase}}>
+    h1 {
+      color: purple;
+      font-size: 4rem;
+    }
+    .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+  </style>
 </Layout>
