--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
+
 import Layout from "../layouts/Layouts.astro";
-import '../styles/global.css';
 
 const title = "Blog";
 ---
@@ -9,9 +9,10 @@ const title = "Blog";
   <h1>My Astro Learning {title}</h1>
   <p>This is where I will post about my journey learning Astro.</p>
 
-  <ul>
+  <ul class="mb-4">
     <li><a href="/posts/post-1/">Post 1</a></li>
     <li><a href="/posts/post-2/">Post 2</a></li>
     <li><a href="/posts/post-3/">Post 3</a></li>
   </ul>
+  
 </Layout>
