--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
+import Hamburger from "../components/Hamburger.astro";
+// import NavTutorial from "../components/NavTutorial.astro";
 import Layout from "../layouts/Layouts.astro";
-import '../styles/global.css';
 
 const title = "Home";
 ---
 
 <Layout title={title}>
+  <Hamburger/>
+  <!-- <NavTutorial/> -->
   <h1 class="text-2xl font-bold">My Astro {title} Site</h1>
+
 </Layout>
